<resources>
    <string name="app_name">BoringCalc</string>
    <string name="value_default"> </string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_plus">+</string>
    <string name="button_min">-</string>
    <string name="button_mul">*</string>
    <string name="button_div">/</string>
    <string name="button_dec">.</string>
    <string name="button_eq">=</string>
    <string name="button_clr">C</string>
</resources>